<resources>
    <string name="app_name">BeamPal</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="is_nearby">is nearby</string>
    <string name="is_not_nearby">is not nearby</string>
    <string name="just_seen">was just seen</string>r
    <string name="enable_notifications">Enable Notifications</string>
    <string name="delete_contact">Remove Contact</string>
    <string name="share_contact">Share Contact</string>
    <string name="open_for_more">Open BeamPal for more</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="please_enable_bluetooth">Please enable Bluetooth in Settings and restart BeamPal</string>
    <string name="no_le">Bluetooth LE not available</string>
    <string name="sorry_no_support_for_le">Sorry, this device does not support Bluetooth LE</string>
    <string name="location_title">BeamPal needs location access to work</string>
    <string name="location_body">We need it so that we can detect beacons in the background</string>
    <string name="limited_title">Limited Functionality</string>
    <string name="limited_body">Since location access has not been granted, BeamPal will not be able to discover beacons when in the background.</string>
    <string name="last_seen">Last Seen: </string>
    <string name="sure_delete">Are you sure that you want to remove this friend?</string>
    <string name="delete">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="edit_phone_number">Edit Details</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="save">Save</string>
    <string name="cant_make_call">Unable to make call</string>
    <string name="vibration">Vibration</string>
    <string name="action_addsomeone">Add Contact</string>
    <string name="action_profile">Profile</string>
    <string name="action_support">Support</string>
    <string name="add_friend">Add Friend</string>
    <string name="pick_beacon_button">Select Beacon</string>
    <string name="no_beacon_selected">No beacon selected</string>
    <string name="add_button">Add</string>
    <string name="no_friends">You haven\'t added any friends.\n\nTap + to add someone</string>
    <string name="notification_no_timeout">Send notifications at each detection, without timeout (very annoying, for testing only)</string>
</resources>
