<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.gla.dcs.friendfinder.MainActivity">
    <item
        android:id="@+id/action_addsomeone"
        android:orderInCategory="100"
        android:title="@string/action_addsomeone"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="101"
        android:title="@string/action_profile"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_support"
        android:orderInCategory="103"
        android:title="@string/action_support"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />
</menu>
