<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <EditText
        android:id="@+id/name_inputfield"
        android:layout_width="200dp"
            android:hint="@string/name_hint"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>


        <EditText
            android:id="@+id/phone_inputfield"
            android:layout_width="200dp"
            android:hint="@string/phone_hint"
            android:layout_height="50dp"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="20dp"
            android:inputType="phone"/>

        <Button
            android:layout_width="200dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="170dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_beacon_button"
            android:onClick="pickBeaconClick" />

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/no_beacon_selected"
            android:id="@+id/selectedBeaconLabel"
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:layout_marginTop="225dp"
            android:layout_marginLeft="30dp" />

        <Button
            android:layout_width="270dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:id="@+id/saveNewFriendButton"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:enabled="false"
            android:onClick="saveClick" />



    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>